<resources>
    <string name="app_name">DraftRecorder</string>
    <string name="action_settings">Settings</string>
    <string name="start_capture">Start capture</string>
    <string name="stop_capture">Stop capture</string>
    <string name="play_sound">Play sound</string>
    <string name="stop_sound">Stop sound</string>
    <string name="enable_metronome">Enable metronome</string>
    <string name="bpm">BPM</string>
    <string name="default_size_len">4</string>
    <string name="slash">/</string>
    <string name="default_size_beats">4</string>
    <string name="default_bpm">120</string>
    <string name="microphone">microphone</string>
    <string name="delete_sound">Delete</string>
    <string name="save_sound">Save</string>
    <string name="action_play">Play</string>
    <string name="action_add_track">Add track</string>
    <string name="metronome">Metronome</string>
    <string name="background_sound">Background sound</string>
    <string name="save_record">Save record</string>
    <string name="enable_grid_changing">Enable grid changing</string>
    <string name="disable_grid_changing">Disable grid changing</string>
    <string name="menu">menu</string>
    <string name="action_delete">Delete</string>
    <string name="add_track">Add track</string>
    <string name="add_record">Add record</string>
    <string name="remove_record">Remove record</string>
    <string name="action_cut_record">Cut record</string>
    <string name="action_add_region">Add new region</string>
    <string name="add_region">Add region</string>
    <string name="action_note">View note</string>
    <string name="save_note">Save note</string>
</resources>
