<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.darkmentat.draftrecorder.ui.activities.CaptureSoundActivity">

    <Button
        android:id="@+id/use_metronome"
        android:text="@string/background_sound"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"/>
    <Button
        android:id="@+id/use_background_sound"
        android:text="@string/metronome"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20pt"
        android:paddingRight="20pt">

        <EditText
            android:id="@+id/bpm"
            android:text="@string/default_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:gravity="center"
            android:ems="2"
            android:inputType="number"/>

        <EditText
            android:id="@+id/size_beats"
            android:layout_toStartOf="@+id/size_slash"
            android:layout_toLeftOf="@+id/size_slash"
            android:textSize="12pt"
            android:text="@string/default_size_beats"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="1"
            android:inputType="number"/>
        <TextView
            android:id="@id/size_slash"
            android:layout_toStartOf="@+id/size_length"
            android:layout_toLeftOf="@+id/size_length"
            android:text="@string/slash"
            android:gravity="center"
            android:textSize="20pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@id/size_length"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/default_size_len"
            android:gravity="center"
            android:textSize="12pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="1"
            android:inputType="number"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/metronome_leds"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <!--<ImageView-->
        <!--android:src="@drawable/microphone"-->
        <!--android:padding="5pt"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:contentDescription="@string/microphone"/>-->

    <Button
        android:id="@+id/start_capture"
        android:text="@string/start_capture"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"/>
    <Button
        android:id="@+id/stop_capture"
        android:text="@string/stop_capture"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/play_sound"
        android:text="@string/play_sound"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/stop_sound"
        android:text="@string/stop_sound"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/delete_sound"
        android:text="@string/delete_sound"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/save_sound"
        android:text="@string/save_sound"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>
